<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_header_sensors" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/temprature"
            android:key="@string/ambient_temp_key"
            android:title="@string/ambient_temp_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/relative_humidity"
            android:key="@string/relative_humidity_key"
            android:title="@string/relative_humidity_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/absolute_humidity"
            android:key="@string/absolute_humidity_key"
            android:title="@string/absolute_humidity_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/pressure"
            android:key="@string/pressure_key"
            android:title="@string/pressure_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/dew_point"
            android:key="@string/dew_point_key"
            android:title="@string/dew_point_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/light"
            android:key="@string/light_key"
            android:title="@string/light_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/magnetic_field"
            android:key="@string/magnetic_field_key"
            android:title="@string/magnetic_field_title" />
    </PreferenceCategory>

</PreferenceScreen>