<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="celsius"
        android:dialogTitle="@string/prefs_temp_unit_title"
        android:entries="@array/prefs_temp_unit_keys"
        android:entryValues="@array/prefs_temp_unit_vals"
        android:icon="@drawable/ic_sysbar_quicksettings"
        android:key="@string/prefs_temp_unit_key"
        android:order="91"
        android:title="@string/prefs_temp_unit_title" />
    <ListPreference
        android:defaultValue="#FFF0F8FF"
        android:dialogTitle="@string/prefs_background_color_title"
        android:entries="@array/prefs_background_color_keys"
        android:entryValues="@array/prefs_background_color_vals"
        android:icon="@drawable/ic_menu_emoticons"
        android:key="@string/prefs_background_color_key"
        android:order="95"
        android:title="@string/prefs_background_color_title" />

    <ListPreference
        android:defaultValue="EEEE, dd MMMM"
        android:dialogTitle="@string/prefs_date_format_title"
        android:entries="@array/prefs_date_format_keys"
        android:entryValues="@array/prefs_date_format_vals"
        android:icon="@android:drawable/ic_menu_today"
        android:key="@string/prefs_date_format_key"
        android:order="94"
        android:title="@string/prefs_date_format_title" />
    <ListPreference
        android:defaultValue="kk:mm a"
        android:dialogTitle="@string/prefs_time_format_title"
        android:entries="@array/prefs_time_format_keys"
        android:entryValues="@array/prefs_time_format_vals"
        android:icon="@drawable/ic_dialog_time"
        android:key="@string/prefs_time_format_key"
        android:order="93"
        android:title="@string/prefs_time_format_title" />

</PreferenceScreen>