<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_clear_data"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_clear_data"/>
    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_help_title"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_about_title"/>

</menu>