<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_description"
            android:paddingBottom="@dimen/rows_bottom_padding"
            android:src="@drawable/about_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/row_bottom_padding_small"
            android:text="@string/about_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/rows_bottom_padding"
            android:text="@string/about_subheader"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:linksClickable="true"
            android:paddingBottom="@dimen/row_bottom_padding_small"
            android:text="@string/about_site_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:paddingBottom="@dimen/rows_bottom_padding"
            android:text="@string/about_site"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/row_bottom_padding_small"
            android:text="@string/about_email_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:gravity="center"
            android:paddingBottom="@dimen/rows_bottom_padding"
            android:text="@string/about_email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/rows_bottom_padding"
            android:text="@string/about_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/goToMarket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_description"
            android:paddingBottom="@dimen/rows_bottom_padding"
            android:src="@drawable/en_app_rgb_wo_60" />
    </LinearLayout>

</ScrollView>